
 Kana no quiz - Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

* Version 2.0 (in development):

- Switchable kana image theme (with the addition of a second
theme, taken from the GPL program "Kana Test").
- Enhanced design of the Kana tables window.
- Updated Polivanov system (new transcripted kana).


* Version 1.7 (2006-10-15):

- Brand new & great kana table window providing a very
conveniant way to either view the full kana list (with trans-
cription, and respecting traditionnal order), select the portion
to be trained upon, or see high size kana image (by clicking
on thumbnails).
- New kana image scaling feature (user may choose the relative
size of the kana images which appear during the quiz).
- Optional use of Psyco to increase Kana no quiz's overall
speed. ;-)
- All images have now switched to PNG format instread of GIF.
- Removing the Tkinter GUI to keep back the GTK as the unique
interface for Kana no quiz.
- Various GUI design enhancements (including some little
choplair arworks realised by Fayane).
- Important code style cleanups plus programming design
optimizations (thanks to Jeremy Bowers' patches in particular).



* Version 1.5 (2006-05-12):

- System-wide installation & per-user configuration.
- More complete quiz result informations (wrong answer recap).
- Windows binary installation package.
- No more learning flow disturbance within a quiz using the
text-entry answering method.
- Added possibility to extend random answers selection range
from the same portion to the same kana set or kind.
- Added Polivanov's kana cyrillization system.
- New Russian translation (made by Aleksej R. Serdyukov).
- New German translation (made by Florian Niemann).
- A quit button added to the main window.


* Version 1.4b (2006-01-01):

- Language confusion between Serbian & Swedish with the
Tkinter interface corrected.
- Update of the Swedish translation.


* Version 1.4 (2005-12-14):

- You can now choose several portions of the same kana set to