@@ -4,9 +4,12 @@
 
 * Version 2.0 (in development):
 
+- Vocal pronouncing of all kana (w/ male & female voices).
+[IN PROGRESS]
 - Switchable kana image theme (with the addition of a second
 theme, taken from the GPL program "Kana Test").
-- Enhanced design of the Kana tables window.
+- Faster loading and enhanced design of the big kana table
+window.
 - Updated Polivanov system (new transcripted kana).
 
 
